Fix nav-links position on mobile to left side

--- a/style.css
+++ b/style.css
@@ -101,9 +101,12 @@ footer {
     background: #004d66;
     position: absolute;
     top: 60px;
-    right: 10px;
+    left: 10px;
+    width: 200px;
     padding: 1rem;
     border-radius: 5px;
+    text-align: left;
+    
   }
 
   .nav-links.show {
@@ -188,7 +191,7 @@ footer {
       background: #004d66;
       position: absolute;
       top: 60px;
-      right: 10px;
+      left: 10px;
       padding: 1rem;
       border-radius: 5px;
     }
@@ -202,5 +205,10 @@ footer {
     }
   }
   
-  
+  .article-content {
+    white-space: pre-line;
+    line-height: 2;
+    color: #333;
+    font-size: 1.5rem; 
+  }
   
